test/units/TypingSpec/valid/prog/implicit-higher-order-call-1.algst
calc : ({Int} -> Int) -> Int

check : Int
check = calc (implicit[Int])

synth : Int
synth =
  let r = calc (implicit[Int]) in
  r
