test/units/TypingSpec/invalid/prog/implicit-multiple-2.algst
calc : ({Int} -> Int) -> Int

{a} : Int
{a} = 10

synth : Int
synth =
  let r = calc (implicit[Int]) in
  r

check : Int
check = calc (implicit[Int])
